gobmkida/g0/report_dragon
/data/output_dir/patch/gobmk/ida/gcc/O0/gobmk-gcc-O0/report_dragon/src/engine/dragon.c:2766:22: error: use of undeclared identifier 'off_4D505A'
v8 = ( const char *)&off_4D505A; 
                     ^
/data/output_dir/patch/gobmk/ida/gcc/O0/gobmk-gcc-O0/report_dragon/src/engine/dragon.c:2768:22: error: use of undeclared identifier 'unk_4D505E'
v8 = ( const char *)&unk_4D505E; 
                     ^
/data/output_dir/patch/gobmk/ida/gcc/O0/gobmk-gcc-O0/report_dragon/src/engine/dragon.c:2773:22: error: use of undeclared identifier 'off_4D505A'
v9 = ( const char *)&off_4D505A; 
                     ^
/data/output_dir/patch/gobmk/ida/gcc/O0/gobmk-gcc-O0/report_dragon/src/engine/dragon.c:2775:22: error: use of undeclared identifier 'unk_4D505E'
v9 = ( const char *)&unk_4D505E; 
                     ^
4 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/gcc/O0/gobmk-gcc-O0/report_dragon/src/obj/1/dragon.o] Error 1
